--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body::before {
       content: "";
-      background-image: url('https://drive.google.com/uc?export=view&id=ID_DE_TU_IMAGEN'); /* ← Reemplaza con tu imagen institucional si deseas */
+      background-image: url('https://drive.google.com/uc?export=view&id=ID_DE_TU_IMAGEN');
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
@@ -227,4 +227,3 @@
       };
 
       fetch(endpoint, {
-       
