--- a/index.html
+++ b/index.html
@@ -154,11 +154,22 @@
 
     function mostrar(id) {
       document.querySelectorAll(".seccion").forEach(s => s.classList.remove("visible"));
-      document.getElementById(id).classList.add("visible");
+      const seccion = document.getElementById(id);
+      if (seccion) {
+        seccion.classList.add("visible");
+      } else {
+        console.error(`No se encontró la sección con id: ${id}`);
+      }
     }
 
     function iniciarJornada() {
-      const nombre = document.getElementById("nombreUsuario").value.trim();
+      const nombreInput = document.getElementById("nombreUsuario");
+      if (!nombreInput) {
+        alert("No se encontró el campo de nombre.");
+        return;
+      }
+
+      const nombre = nombreInput.value.trim();
       if (nombre === "") {
         alert("Por favor ingresa tu nombre.");
         return;
@@ -169,7 +180,11 @@
       fechaEntrada = ahora.toISOString().split("T")[0];
       horaEntrada = ahora.toTimeString().slice(0,5);
 
-      document.getElementById("mensajeBienvenida").textContent = `${nombreUsuario}, gracias por tu compromiso. ¡Vamos a dar lo mejor hoy!`;
+      const mensaje = document.getElementById("mensajeBienvenida");
+      if (mensaje) {
+        mensaje.textContent = `${nombreUsuario}, gracias por tu compromiso. ¡Vamos a dar lo mejor hoy!`;
+      }
+
       mostrar("bienvenida");
 
       setTimeout(() => {
@@ -208,10 +223,4 @@
         destino: destino,
         asignadoA: asignado,
         tipoServicio: tipoServicio,
-        observaciones: document.getElementById("observaciones").value
-      };
-
-      fetch(endpoint, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(datos)
+        observaciones: document.getElement
